# BballIQ

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  timeline.md
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260403_225852_1fe3ed53b4de_initial_schema.py  20260411_000000_add_matchups_and_all_in_one.py  20260413_000000_add_nbarapm_tables.py  20260413_000001_add_peak_raptor_mamba_ftov.py  20260413_000002_drop_raptor_from_all_in_one.py  20260413_000003_add_darko_history.py  20260413_000004_add_lineup_stats.py  20260413_000005_fix_tm_tov_pct_precision.py  20260413_000006_add_bio_touches_handoff.py  20260413_000007_add_tracking_advanced_tables.py  20260413_000008_add_game_logs_consistency.py  20260414_000000_add_touches_breakdown_and_opp_shooting.py  20260414_000001_expand_existing_models_full_api_coverage.py  20260421_000000_add_player_season_unique_constraints.py  20260422_000000_add_game_stats_composite_and_player_name_trgm.py  20260503_000000_add_player_on_off_shooting.py
backend/app/: main.py
backend/app/api/routes/: advanced_stats.py  computed_stats.py  impact.py  leaderboards.py  play_types.py  players.py
backend/app/core/: cache.py  celery_app.py  config.py  logging.py  observability.py  season.py
backend/app/db/: session.py
backend/app/models/: __init__.py  advanced_stats.py  all_in_one_metrics.py  big_board.py  career_stats.py  clutch_stats.py  computed_advanced.py  consistency_stats.py  contextualized_impact.py  darko_history.py  defender_distance_shooting.py  defensive_matchups.py  defensive_play_types.py  forced_turnovers.py  game_play_type_stats.py  game_stats.py  lineup_stats.py  mamba_history.py  on_off_stats.py  opponent_shooting.py  passing_stats.py  peak_rapm.py  per_75_stats.py  player.py  player_matchups.py  player_on_off_shooting.py  rapm_windows.py  raptor_history.py  rebounding_tracking.py  season_play_type_stats.py  season_stats.py  shooting_tracking.py  shot_zones.py  six_factor_rapm.py  speed_distance.py  touches_breakdown.py
backend/app/schemas/: __init__.py  advanced_stats.py  computed_stats.py  impact.py  leaderboard.py  play_type.py  player.py  player_card.py
backend/app/services/: __init__.py  all_in_one_scraper.py  bpm_calculator.py  championship.py  composite_leaderboard.py  gravity.py  impact_calculator.py  luck_adjusted.py  metrics.py  metrics_utils.py  nba_data.py  opponent_tier.py  pbp_data.py  per_75_calculator.py  per_calculator.py  player_card.py  portability.py  radar_calculator.py  rate_limiter.py  redis_cache.py  scheme_compatibility.py  win_shares_calculator.py
backend/app/services/nba/: __init__.py  advanced.py  base.py  constants.py  defense.py  lineups.py  models.py  play_types.py  players.py  shots.py  tracking.py  traditional.py
backend/app/tasks/: __init__.py  data_refresh.py  metrics.py
backend/docs/: custom_metrics_plan.md
backend/scripts/: fetch_advanced_data.py  fetch_all_in_one_data.py  fetch_bio_data.py  fetch_data.py  fetch_game_logs.py  fetch_historical.py  fetch_impact_data.py  fetch_matchup_data.py  fetch_nbarapm_data.py  fetch_phase2_data.py  fetch_play_type_data.py  fetch_touches_and_opp_defense.py  fetch_tracking_advanced.py  seed_all.py  seed_everything.py  seed_new_stats.py  seed_synthetic_verify.py  shared.py
backend/scripts/champ_backtest/: cli.py  compute_index.py  data_collection.py  feature_extraction.py  validate.py
backend/scripts/champ_backtest/cache/: .gitignore
backend/scripts/champ_backtest/output/: .gitignore
backend/tests/: conftest.py  test_advanced_stats_routes.py  test_computed_stats_routes.py  test_data_refresh.py  test_data_refresh_tasks.py  test_gravity.py  test_health_and_observability.py  test_impact_routes.py  test_leaderboards_routes.py  test_nba_data.py  test_pbp_data.py  test_play_types_routes.py  test_players_routes.py  test_rate_limiter.py  test_redis_cache.py  test_season.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ErrorBoundary.tsx  Layout.tsx  MetricGauge.tsx  PlayerCard.tsx
frontend/src/context/: SeasonContext.tsx
frontend/src/data/: cortexMockData.ts  (+1 more)
k8s/: backend.yaml  celery.yaml  frontend.yaml  ingress.yaml  namespace.yaml  observability-config.yaml  postgres.yaml  redis.yaml  secrets.example.yaml  secrets.yaml  seed-job.yaml
k8s/cert-manager/: clusterissuer.yaml  selfsigned-certificate.yaml  selfsigned-issuer.yaml
k8s/sealed-secrets/: README.md
k8s/tls/: README.md
(+44 files in other folders)
