[project]
name = "statfloor"
version = "0.1.0"
description = "Per-touch offensive and defensive metrics for every NBA player"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "nba_api>=1.5.0,<2.0.0",
    "pbpstats>=1.0.0,<2.0.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "fastapi-cache2[redis]>=0.2.1,<0.3",
    # Observability: Sentry for error reporting (optional at runtime — skipped
    # when SENTRY_DSN is unset), Prometheus metrics endpoint, structlog for
    # JSON-formatted logs with per-request / per-task context.
    "sentry-sdk[fastapi,celery,sqlalchemy,redis]>=2.0,<3.0",
    "prometheus-fastapi-instrumentator>=7.0,<8.0",
    "structlog>=24.1,<26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "fakeredis>=2.21.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may require external services)",
    "slow: Tests that take a long time to run",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
